You know I got these changes and ain't got time for a message

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -14,26 +14,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.icm.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.icm.LoanBorrowActivity"
-            android:label="@string/title_activity_loan_borrow" >
-        </activity>
-        <activity
             android:name="com.icm.DashboardActivity"
             android:label="@string/title_activity_dashboard" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.icm.LoanBorrowActivity">
+            
         </activity>
     </application>
 
