--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="17" />
     
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.INTERNET" /> 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> 
     
     <application
         android:allowBackup="true"
