--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -19,15 +19,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.icm.DashboardActivity"
-            android:label="@string/title_activity_dashboard" >
+            android:name="com.icm.DashboardActivity" 
+            android:configChanges="orientation|keyboardHidden|keyboard" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.icm.LoanBorrowActivity">
+            android:name="com.icm.LoanBorrowActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard">
             
         </activity>
     </application>
