--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -7,30 +7,38 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="17" />
-    
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:name="com.icm.BooksWithFriendsApplication"
         android:allowBackup="true"
-        android:name="BooksWithFriendsApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.icm.DashboardActivity" 
+            android:name="com.icm.DashboardActivity"
             android:configChanges="orientation|keyboardHidden|keyboard" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.icm.LoanBorrowActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard">
-            
+            android:configChanges="orientation|keyboardHidden|keyboard" >
+        </activity>
+        <activity
+            android:name="com.icm.HistoryActivity"
+            android:label="@string/title_activity_history" >
+        </activity>
+        <activity
+            android:name="com.icm.LibraryActivity"
+            android:label="@string/title_activity_library" >
         </activity>
     </application>
 
