--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <application
         android:name="com.icm.BooksWithFriendsApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_launcher_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
